--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-# node
+node_modules/
+.env
+.DS_Store
+frontend/build/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
+.vscode/
+coverage/# node
 node_modules/
 
 # env
